[gd_scene load_steps=18 format=3 uid="uid://dw5oqvrejpg8p"]

[ext_resource type="Script" path="res://TopUpPage.gd" id="1_dhtay"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="1_lqarc"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/font/大部分的字體/04B_30__.TTF" id="3_24dtt"]
[ext_resource type="Texture2D" uid="uid://dsl3ecoy1s3pn" path="res://png/MainScene/錢跟鑽.png" id="4_0nypl"]
[ext_resource type="Texture2D" uid="uid://dheg6seu76yfg" path="res://png/TopUp/課金-03.png" id="5_la4qv"]
[ext_resource type="Texture2D" uid="uid://d0wguytvscpoh" path="res://png/TopUp/課金-06.png" id="5_ws4dk"]
[ext_resource type="Texture2D" uid="uid://dnsav2mynvbqo" path="res://png/TopUp/課金-04.png" id="6_33mgj"]
[ext_resource type="Texture2D" uid="uid://c1s4lx8v7l0w5" path="res://png/TopUp/課金-05.png" id="7_q2iau"]
[ext_resource type="Texture2D" uid="uid://ccvf0ujk2pw0x" path="res://png/TopUp/課金-07.png" id="9_jq3p1"]
[ext_resource type="Texture2D" uid="uid://tuw2355ioeki" path="res://png/TopUp/課金-08.png" id="10_6lk3j"]
[ext_resource type="Texture2D" uid="uid://4xnu8khbm0sy" path="res://png/TopUp/課金-09.png" id="11_5owbd"]
[ext_resource type="Texture2D" uid="uid://csighurmtx8ox" path="res://png/TopUp/通知.png" id="12_o8gwt"]
[ext_resource type="Texture2D" uid="uid://uhtt4bqp1vy7" path="res://png/TopUp/取消鈕.png" id="13_lecqt"]
[ext_resource type="Texture2D" uid="uid://dyr7csnntrsdl" path="res://png/TopUp/確認鈕.png" id="14_rqkf5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0yotp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jpi1v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lpjdj"]

[node name="TopUpPage" type="Node2D"]
script = ExtResource("1_dhtay")

[node name="BG" parent="." instance=ExtResource("1_lqarc")]

[node name="Label" type="Label" parent="."]
offset_left = 35.0
offset_top = 35.0
offset_right = 285.0
offset_bottom = 95.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_24dtt")
theme_override_font_sizes/font_size = 50
text = "Shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="MarginContainer" parent="."]
offset_left = 60.0
offset_top = 465.0
offset_right = 176.0
offset_bottom = 500.0

[node name="BackLabel" type="Label" parent="Back"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_24dtt")
theme_override_font_sizes/font_size = 30
text = "BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TouchScreenButton" parent="Back"]
position = Vector2(58, 15)
scale = Vector2(6.5, 2)
shape = SubResource("RectangleShape2D_0yotp")

[node name="CoinAmount" type="Label" parent="."]
offset_left = 685.0
offset_top = 35.0
offset_right = 845.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_24dtt")
theme_override_font_sizes/font_size = 30
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GemAmount" type="Label" parent="."]
offset_left = 940.0
offset_top = 35.0
offset_right = 1040.0
offset_bottom = 75.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_24dtt")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinAndGem" type="TouchScreenButton" parent="."]
position = Vector2(636, 24)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("4_0nypl")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
offset_left = 100.0
offset_top = 129.0
offset_right = 1052.0
offset_bottom = 389.0
horizontal_scroll_mode = 3
vertical_scroll_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
layout_direction = 2
layout_mode = 2
theme_override_constants/separation = 50

[node name="Coins700" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins700"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("5_la4qv")
centered = false

[node name="coin700" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins700"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins700"]
layout_mode = 2
text = "                                                  "

[node name="Coins350" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins350"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("6_33mgj")
centered = false

[node name="coin350" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins350"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins350"]
layout_mode = 2
text = "                                                  "

[node name="Coins100" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Coins100"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("7_q2iau")
centered = false

[node name="coin100" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Coins100"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Coins100"]
layout_mode = 2
text = "                                                  "

[node name="Gems90" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems90"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("5_ws4dk")
centered = false

[node name="gem90" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems90"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems90"]
layout_mode = 2
text = "                                                  "

[node name="Gems60" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems60"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("9_jq3p1")
centered = false

[node name="gem60" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems60"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems60"]
layout_mode = 2
text = "                                                  "

[node name="Gems30" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems30"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_6lk3j")
centered = false

[node name="gem30" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems30"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems30"]
layout_mode = 2
text = "                                                  "

[node name="Gems6" type="MarginContainer" parent="ScrollContainer/HBoxContainer"]
layout_mode = 2

[node name="Sprite2D" type="Sprite2D" parent="ScrollContainer/HBoxContainer/Gems6"]
scale = Vector2(1.3, 1.3)
texture = ExtResource("11_5owbd")
centered = false

[node name="gem6" type="TouchScreenButton" parent="ScrollContainer/HBoxContainer/Gems6"]
position = Vector2(105, 131)
scale = Vector2(10, 12)
shape = SubResource("RectangleShape2D_jpi1v")

[node name="Label" type="Label" parent="ScrollContainer/HBoxContainer/Gems6"]
layout_mode = 2
text = "                                                  "

[node name="ConfirmBG" type="Sprite2D" parent="."]
position = Vector2(576, 267)
scale = Vector2(1.31, 1.31)
texture = ExtResource("12_o8gwt")

[node name="QuestionLabel" type="Label" parent="ConfirmBG"]
offset_left = -200.855
offset_top = -50.3588
offset_right = 199.145
offset_bottom = 9.64122
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("3_24dtt")
theme_override_font_sizes/font_size = 23
text = "confirm to purchase
90 diamonds?"
horizontal_alignment = 1

[node name="Cancel" type="Sprite2D" parent="ConfirmBG"]
position = Vector2(-100.764, 65.649)
texture = ExtResource("13_lecqt")

[node name="CancelButton" type="TouchScreenButton" parent="ConfirmBG/Cancel"]
position = Vector2(0, 0.763947)
scale = Vector2(5, 2)
shape = SubResource("RectangleShape2D_lpjdj")

[node name="Confirm" type="Sprite2D" parent="ConfirmBG"]
position = Vector2(100, 65)
texture = ExtResource("14_rqkf5")

[node name="ConfirmButton" type="TouchScreenButton" parent="ConfirmBG/Confirm"]
position = Vector2(0, 0.763947)
scale = Vector2(5, 2)
shape = SubResource("RectangleShape2D_lpjdj")

[connection signal="pressed" from="Back/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins700/coin700" to="." method="_on_coin_700_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins350/coin350" to="." method="_on_coin_350_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Coins100/coin100" to="." method="_on_coin_100_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems90/gem90" to="." method="_on_gem_90_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems60/gem60" to="." method="_on_gem_60_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems30/gem30" to="." method="_on_gem_30_pressed"]
[connection signal="pressed" from="ScrollContainer/HBoxContainer/Gems6/gem6" to="." method="_on_gem_6_pressed"]
[connection signal="pressed" from="ConfirmBG/Cancel/CancelButton" to="." method="_on_cancel_button_pressed"]
